# Point-Game

./: .gitignore  CMakeLists.txt  README.md  UI.py  main.py  maps.py  setting.py  sprites.py
UI/: __init__.py  bullet.py  fps.py  health_point.py  interface.py  no_playing.py  start.py  state.py  win.py
docs/: Rule.md  Thanks.md  ToDo.md
include/: bullet.h  camera.h  common.h  display.h  draw.h  enemy.h  game.h  infoLabel.h  main.h  map.h  painter.h  player.h  raycast.h  ui.h  window.h
maps/: map_1.py
res/: map
sources/: map.txt
sprites/: __init__.py  bullet.py  point.py
src/: CMakeLists.txt  bullet.c  camera.c  display.c  draw.c  enemy.c  game.c  infoLabel.c  main.c  map.c  painter.c  player.c  raycast.c  ui.c  window.c
src/Point-Game/: config.py  game.py  main.py  map.py  maps.py  player.py
src/Point-Game/character/: bullet.py  player.py
src/Point-Game/interface/: fps_counter.py  main_menu.py
test/: map.py
